# socket

./: .editorconfig  .gitignore  CLAUDE.md  CONNECTIONCONTEXT_LIFECYCLE_BUG.md  HANDOFF.md  HANDOFF_V6.md  MAJOR_API_REDESIGN.md  README.md  RFC_DETERMINISTIC_SIMULATION.md  RFC_READ_TIMEOUT_CONTRACT.md  RFC_TRANSPORT_FALLBACK.md  RFC_UNIFIED_ESTABLISHMENT.md  RFC_UNIFIED_NETWORK_TEST_HARNESS.md  RFC_WRITE_TIMEOUT_CONTRACT.md  Readme.md  TCPBYTESTREAM_ISSUES.md  TCPBYTESTREAM_READ_BUG.md  TESTING_STRATEGY.md  TLS_READ_BUG.md  TODO.md  V6_MAC_VALIDATION.md  V6_PHASE4_HANDOFF.md  build.gradle.kts  buildSwift.sh  gradle.properties  settings.gradle.kts  socket.podspec
.ci/consumer-smoke/: build.gradle.kts  settings.gradle.kts
.ci/validate-resolution/: build.gradle.kts
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: android_integration.yaml  apple-nw-diag.yaml  build-apple.yaml  build-linux.yaml  buildAndDeploy.yaml  docs.yaml  integration.yaml  merged.yaml  native-deps-freshness.yaml  publish-to-central.yaml  release.yaml  review.yaml  validate-artifacts.yaml  weekly-dependency-update.yaml
SocketWrapper/: .travis.yml  LICENSE  README.md  SocketWrapper.podspec
SocketWrapper/Example/: Podfile
buildSrc/: build.gradle
buildSrc/openssl/: Dockerfile  build-openssl.sh
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: getting-started.md  intro.md
gradle/: libs.versions.toml  setup.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
libs/liburing/: .gitattributes
network-monitor/: MACOS_JVM_NWPATHMONITOR.md  build.gradle.kts  gradle.properties
scripts/: arm64-container-test.sh
socket-http3/: .editorconfig  .gitignore  HANDOFF.md  build.gradle.kts  gradle.properties
socket-http3/docker-interop/: Dockerfile  README.md  run-server.sh  server.py
socket-http3/h3spec/: Dockerfile  README.md  run-h3spec.sh
socket-http3/qpack-diff/: Dockerfile  README.md  qpack-diff-server.py  run-qpack-diff.sh
socket-quic/: .editorconfig  DRIVER_REDESIGN.md  JS_QUIC_WASM_PLAN.md  MIGRATION_FOLLOWUPS.md  MIGRATION_SLICE3.md  RISKS.md  build.gradle.kts  gradle.properties
socket-quic-default/: build.gradle.kts  gradle.properties
socket-quic-nw/: OS26_SWIFT_BRIDGE_PLAN.md  build.gradle.kts  gradle.properties  os26-bridge-reference.swift
socket-quic-nw/testcerts/: cert.crt  cert.key
socket-quic-quiche/: build.gradle.kts  gradle.properties
socket-quic-quiche/fuzz/native/: Cargo.toml
socket-quic-quiche/fuzz/native/fuzz_targets/: conn_recv.rs  header_info.rs
socket-quic-quiche/mozilla-ca/: README.md
socket-quic-testsuite/: build.gradle.kts
socket-quic-trace-tools/: build.gradle.kts  gradle.properties
socket-quic/fuzz/: README.md
socket-quic/fuzz/native/: .gitignore  Cargo.toml
socket-testkit/: build.gradle.kts  gradle.properties
socket-testsuite/: build.gradle.kts  gradle.properties
socket-udp/: build.gradle.kts  gradle.properties
socket-webtransport/: build.gradle.kts  gradle.properties
test-harness/: .gitignore  README.md  compose-up-retry.sh  docker-compose.yml  harness-consumer.yml  harness.env
webpack.config.d/: patch.js
(+1047 files in other folders)
