# Native ASAN + coverage-guided fuzzing of quiche's Rust parse path.
#
# This is the "separate effort" the JVM Jazzer fuzzer (quicHeaderFuzz / HeaderInfoFuzzer.kt) and
# socket-quic/fuzz/README.md call for: JVM Jazzer can't instrument native quiche, so its libFuzzer
# coverage counter plateaus immediately and it only catches crashes. cargo-fuzz builds quiche itself
# with SanitizerCoverage + AddressSanitizer, so libFuzzer gets real edge coverage of the Rust parser
# AND ASAN catches the heap-overflow / use-after-free class the glibc malloc-check lane only partially
# sees. Same quiche version (0.29.2) as the shipped library (gradle/libs.versions.toml).
[package]
name = "quiche-native-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Pinned to the same version the library ships. quiche 0.29's default feature is now
# `boringssl-boring-crate` (it dropped `boringssl-vendored`), so default-features pulls a
# self-contained BoringSSL via boring-sys — the CI fuzz job installs libclang for its bindgen.
# The `ffi` C API isn't needed since we fuzz the Rust API directly.
quiche = "0.29.2"

# Release-with-debug so ASAN/libFuzzer reports carry symbolized stacks while still optimizing the parser.
[profile.release]
debug = 1

[[bin]]
name = "header_info"
path = "fuzz_targets/header_info.rs"
test = false
doc = false
bench = false

# Deeper target: the server packet-recv state machine (accept + Connection::recv), not just the public
# header parse. Pre-auth attack surface; with a clang toolchain the build also ASAN-instruments BoringSSL.
[[bin]]
name = "conn_recv"
path = "fuzz_targets/conn_recv.rs"
test = false
doc = false
bench = false
